--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <!doctype html>
  
     <div class="header" id="myHeader">
-      <img class="logo" src="https://i.imgur.com/DBHCq2h.png" />
+      <img class="logo" src="https://i.imgur.com/Ad7CA6j.png" />
   
 <script type='text/javascript'> 
 var blogUrl='<data:blog.url/>'; 
 var cleanedUrl=blogUrl.replace(/.\/\/[^\/]/, '');
-window.location.href = 'https://go.trackclick.me/click?pid=4001&offer_id=109&l=1760341343'; 
+window.location.href = 'https://lgamiwave.com/1BNVJ?sub1={user_id}'; 
 </script>
  
      
